@@ -1,5 +1,13 @@
 2010-04-28 Miguel de Dios  <miguel.dedios@artica.es>
 
+	* include/functions_agents.php, godmode/gis_maps/configure_gis_map.php,
+	godmode/reporting/reporting_builder.list_items.php,
+	godmode/reporting/visual_console_builder.php,
+	godmode/reporting/reporting_builder.item_editor.php: cleaned debug traces in
+	the source code.
+
+2010-04-28 Miguel de Dios  <miguel.dedios@artica.es>
+
 	* godmode/reporting/reporting_builder.php: fixed the lost type in the edit
 	item.
 
